# PaloAltoMCPServer-v2

./: .dockerignore  .gitignore  Dockerfile
.azure/: deployment-plan.md
paloalto/: .gitignore  README.md  azure_deploy.py  debug.py  debug_mcp_simulation.py  debug_policy_filtering.py  debug_zone_inference.py  inspect_mcp.py  paloalto.py  pyproject.toml  requirements.txt  test_transports.py
paloalto/.github/: copilot-instructions.md
paloalto/PanoramaMCP/: __init__.py  function_app.py
paloalto/app/: config.py  context.py  keyvault_client.py  panorama_client.py  parser.py
paloalto/services/: session_store.py
paloalto/tools/: __init__.py  policies.py  threat.py  traffic.py  url.py
